@@ -446,7 +446,7 @@ public class CaseItems extends AbstractPageBean {
 
 
     public String btnDetails_action() {
-        Integer selectedRowIndex = new Integer((String) hdnRowIndex.getValue()) - 1;
+        Integer selectedRowIndex = Integer.valueOf((String) hdnRowIndex.getValue()) - 1;
         _sb.setItemSelection(selectedRowIndex);
         return "showParameters";
     }
